test/sema/typeck/trait/object-as-argument-wrong-return.dora
trait Foo { fn baz(); }
fn f(x: Foo): String { return x.baz(); }
